[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/thems/s18.tres" type="Theme" id=1]
[ext_resource path="res://src/popup/game_menu/game_menu.gd" type="Script" id=2]

[node name="game_menu" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -854.0
margin_bottom = -390.0
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_right = 164.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 164.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="resume" type="Button" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 164.0
margin_bottom = 39.0
theme = ExtResource( 1 )
text = "RESUME"

[node name="VSplitContainer2" type="VSplitContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 164.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 10 )
split_offset = 50

[node name="exit_to_menu" type="Button" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 164.0
margin_bottom = 82.0
theme = ExtResource( 1 )
text = "EXIT TO MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer3" type="VSplitContainer" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 164.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 10 )
split_offset = 50

[node name="exit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 164.0
margin_bottom = 125.0
theme = ExtResource( 1 )
text = "EXIT..."
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/exit_to_menu" to="." method="_on_exit_to_menu_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
